// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSelectOptions creates an option list 1`] = `
Array [
  <option
    data-testid="test-val"
    label="Value"
    value="val"
  >
    Value
  </option>,
  <option
    data-testid="test-val2"
    label="Value 2"
    value="val2"
  >
    Value 2
  </option>,
]
`;

exports[`parseSelectOptions creates an option list 2`] = `
Array [
  <option
    data-testid="test-val"
    label="val"
    value="val"
  >
    val
  </option>,
  <option
    data-testid="test-val2"
    label="val2"
    value="val2"
  >
    val2
  </option>,
]
`;
